# synthetic-l3-marketdata-engine

./: .gitignore  CMakeLists.txt  README.md  run.sh
include/: types.hpp
include/utils/: config_loader.hpp  correlator.hpp  deribit_client.hpp  l3_order_tracker.hpp  market_data_handler.hpp  shadow_book.hpp  trade_buffer.hpp  websocket_client.hpp
src/: main.cpp
src/utils/: config_loader.cpp  correlator.cpp  deribit_client.cpp  l3_order_tracker.cpp  market_data_handler.cpp  shadow_book.cpp  trade_buffer.cpp  websocket_client.cpp
